--- a/lake-cabin30.html
+++ b/lake-cabin30.html
@@ -196,7 +196,7 @@
           <div className="max-w-7xl mx-auto">
             {/* Header */}
             <div className="text-center mb-12">
-              <h1 className="text-6xl font-black text-slate-800 mb-4">Lake Cabin</h1>
+              <h1 className="text-4xl font-black text-slate-800 mb-4">Lake Cabins</h1>
               <p className="text-xl text-slate-600 mb-6">Score and compare lake cabins</p>
             </div>
 
