--- a/lake-cabin30.html
+++ b/lake-cabin30.html
@@ -274,7 +274,7 @@
                                     className="text-xl font-semibold flex items-center gap-2 hover:text-teal-100 flex-1"
                                     onClick={(e) => { e.stopPropagation(); setEditingNumber(cabin.id); }}
                                   >
-                                    {cabin.number || 'Add number...'}
+                                    {cabin.number || 'Number...'}
                                     <i data-lucide="edit-2" className="w-4 h-4 opacity-60"></i>
                                   </div>
                                 )}
