--- a/lake-cabin30.html
+++ b/lake-cabin30.html
@@ -217,7 +217,7 @@
             ) : (
               <div className="mb-8 bg-gradient-to-br from-teal-600 to-blue-600 rounded-2xl shadow-2xl p-8 text-white">
                 <h2 className="text-3xl font-bold mb-6 flex items-center gap-3">
-                  <span className="text-4xl">🏡</span> Your Cabins
+                  <span className="text-4xl">🏡</span> Cabins
                 </h2>
 
                 <div className="grid gap-4">
