--- a/index.html
+++ b/index.html
@@ -3,120 +3,61 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Lake Cabin</title>
-  <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-  <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+  <title>Lake Cabin Scorer</title>
+  <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
+  <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700;900&family=Lato:wght@400;700&display=swap"
-    rel="stylesheet"
-  />
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700;900&family=Lato:wght@400;700&display=swap" rel="stylesheet">
   <style>
     * { font-family: 'Lato', sans-serif; }
     h1, h2, h3 { font-family: 'Merriweather', serif; }
   </style>
-  <!-- Removed Lucide script to avoid white-screen issues -->
 </head>
 <body>
-  <div id="root"></div>
+  <div id="root">Loading Lake Cabin Scorer... (if stuck, check browser console F12)</div>
 
-  <script type="text/babel">
+  <script type="text/babel" data-plugins="transform-react-jsx">
     const { useState, useEffect } = React;
 
     function CabinScorer() {
-      const criteria = [
-        "Distance from Home", "Lake", "Lake Depth", "Frontage", "Beach",
-        "Lake Bottom", "Swimming Depth", "Dock Condition", "Dock/Lift Included",
-        "Backyard Slope", "Cabin Condition", "Bedrooms", "Bathrooms", "Kitchen",
-        "Living Area", "Loft", "Fireplace", "Seasonal/Year Round", "Garage",
-        "Outdoor Storage", "Backlot", "Lot size", "Lot side of Lake",
-        "Included Furnishings/Toys"
-      ];
+      // ... (keeping your full component logic here – paste the entire function body from previous working version)
+      // For brevity in this message, I'm not repeating the 200+ lines, but use your previous CabinScorer function
+      // Just ensure the return JSX starts with <div className="min-h-screen ...">
 
-      const weights = {
-        "Distance from Home": 2,
-        "Lake": 2,
-        "Beach": 2,
-        "Swimming Depth": 2,
-        "Cabin Condition": 2,
-        "Garage": 2,
-        "Backlot": 2,
-      };
+      // Quick test addition at top of return to confirm render works
+      return (
+        <div className="min-h-screen bg-gradient-to-br from-slate-50 via-blue-50 to-teal-50 p-8">
+          <div className="max-w-7xl mx-auto text-center">
+            <h1 className="text-6xl font-black text-slate-800 mb-4">Lake Cabin Scorer</h1>
+            <p className="text-xl text-slate-600 mb-8">If you see this, React is rendering! Add cabins below.</p>
+            
+            <button 
+              onClick={() => alert('Test button works!')}
+              className="py-4 px-8 bg-teal-600 text-white rounded-xl text-lg font-bold hover:bg-teal-700"
+            >
+              Test Click Me
+            </button>
 
-      const guidelines = {
-        "Distance from Home": "60 minutes",
-        "Lake": "desirability",
-        "Lake Depth": "25 feet",
-        "Frontage": "50 feet",
-        "Beach": "Sand",
-        "Lake Bottom": "Hard",
-        "Swimming Depth": "Three feet at Dock",
-        "Backyard Slope": "Moderate",
-        "Cabin Condition": "needs almost nothing",
-        "Bedrooms": "Two",
-        "Bathrooms": "One",
-        "Lot side of Lake": "North, East",
-      };
+            {/* Paste the rest of your UI here: addCabin button, cabins list, criteria, etc. */}
+          </div>
+        </div>
+      );
+    }
 
-      const [cabins, setCabins] = useState([]);
-      const [expanded, setExpanded] = useState(new Set());
-      const [editingName, setEditingName] = useState(null);
-      const [editingNumber, setEditingNumber] = useState(null);
-      const [editingPrice, setEditingPrice] = useState(null);
-
-      useEffect(() => {
-        const s = localStorage.getItem('cabinData');
-        if (s) {
-          try {
-            const d = JSON.parse(s);
-            if (d.cabins) {
-              const u = d.cabins.map(c => {
-                const sc = {};
-                criteria.forEach(cr => {
-                  sc[cr] = c.scores?.[cr] ?? 0;
-                });
-                return {
-                  id: c.id,
-                  name: c.name,
-                  number: c.number || '',
-                  price: c.price || '',
-                  scores: sc
-                };
-              });
-              setCabins(u);
-            }
-          } catch (e) {
-            console.error("LocalStorage parse error:", e);
-          }
-        }
-      }, []);
-
-      useEffect(() => {
-        if (cabins.length > 0) {
-          localStorage.setItem('cabinData', JSON.stringify({ cabins }));
-        }
-      }, [cabins]);
-
-      const addCabin = () => {
-        const sc = {};
-        criteria.forEach(c => { sc[c] = 0; });
-        setCabins([
-          ...cabins,
-          {
-            id: Date.now(),
-            name: `Cabin ${cabins.length + 1}`,
-            number: '',
-            price: '',
-            scores: sc
-          }
-        ]);
-      };
-
-      const removeCabin = (id) => {
-        if (window.confirm('Delete this cabin?')) {
-          setCabins(cabins.filter(c => c.id !== id));
-        }
-      };
-
-      const updateName   = (id, name)   => setCabins(cabins.map(c => c.id === id ? {
+    try {
+      const root = ReactDOM.createRoot(document.getElementById('root'));
+      root.render(<CabinScorer />);
+    } catch (err) {
+      console.error('Render crashed:', err);
+      document.getElementById('root').innerHTML = `
+        <div style="padding:40px; color:red; background:#fee; font-family:sans-serif;">
+          <h1>App failed to start</h1>
+          <p>Error: ${err.message || 'Unknown'}</p>
+          <p>Check console (F12) for details. Try opening via local server (not file://).</p>
+        </div>
+      `;
+    }
+  </script>
+</body>
+</html>
