--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Lake Cabin Scorer</title>
-  <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
-  <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
+  <title>Lake Cabin</title>
+  <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
+  <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700;900&family=Lato:wght@400;700&display=swap" rel="stylesheet">
@@ -13,51 +13,195 @@
     * { font-family: 'Lato', sans-serif; }
     h1, h2, h3 { font-family: 'Merriweather', serif; }
   </style>
+  <script src="https://unpkg.com/lucide@0.574.0/dist/umd/lucide.js"></script>
 </head>
-<body>
-  <div id="root">Loading Lake Cabin Scorer... (if stuck, check browser console F12)</div>
+<body class="bg-gradient-to-br from-slate-50 via-blue-50 to-teal-50 min-h-screen p-8">
+  <div id="root"></div>
 
-  <script type="text/babel" data-plugins="transform-react-jsx">
+  <script type="text/babel">
     const { useState, useEffect } = React;
 
     function CabinScorer() {
-      // ... (keeping your full component logic here – paste the entire function body from previous working version)
-      // For brevity in this message, I'm not repeating the 200+ lines, but use your previous CabinScorer function
-      // Just ensure the return JSX starts with <div className="min-h-screen ...">
+      const criteria = [
+        "Distance from Home","Lake","Lake Depth","Frontage","Beach",
+        "Lake Bottom","Swimming Depth","Dock Condition","Dock/Lift Included",
+        "Backyard Slope","Cabin Condition","Bedrooms","Bathrooms","Kitchen",
+        "Living Area","Loft","Fireplace","Seasonal/Year Round","Garage",
+        "Outdoor Storage","Backlot","Lot size","Lot side of Lake",
+        "Included Furnishings/Toys"
+      ];
 
-      // Quick test addition at top of return to confirm render works
+      const weights = {
+        "Distance from Home":2, "Lake":2, "Beach":2, "Swimming Depth":2,
+        "Cabin Condition":2, "Garage":2, "Backlot":2
+      };
+
+      const [cabins, setCabins] = useState([]);
+      const [expanded, setExpanded] = useState(new Set());
+
+      useEffect(() => {
+        const saved = localStorage.getItem('cabinData');
+        if (saved) {
+          try {
+            const data = JSON.parse(saved);
+            if (data.cabins) {
+              const loaded = data.cabins.map(c => {
+                const scores = {};
+                criteria.forEach(cr => {
+                  scores[cr] = c.scores?.[cr] ?? 0;
+                });
+                return { id: c.id, name: c.name, scores };
+              });
+              setCabins(loaded);
+            }
+          } catch (e) {}
+        }
+      }, []);
+
+      useEffect(() => {
+        if (cabins.length > 0) {
+          localStorage.setItem('cabinData', JSON.stringify({ cabins }));
+        }
+      }, [cabins]);
+
+      const addCabin = () => {
+        const scores = {};
+        criteria.forEach(c => scores[c] = 0);
+        setCabins([...cabins, {
+          id: Date.now(),
+          name: `Cabin ${cabins.length + 1}`,
+          scores
+        }]);
+      };
+
+      const updateScore = (cabinId, crit, value) => {
+        setCabins(cabins.map(c =>
+          c.id === cabinId ? { ...c, scores: { ...c.scores, [crit]: value } } : c
+        ));
+      };
+
+      const calculateTotal = (cabin) => {
+        let sum = 0;
+        for (const crit in cabin.scores) {
+          sum += (cabin.scores[crit] || 0) * (weights[crit] || 1);
+        }
+        return sum;
+      };
+
+      const toggleExpanded = (id) => {
+        setExpanded(prev => {
+          const next = new Set(prev);
+          if (next.has(id)) next.delete(id);
+          else next.add(id);
+          return next;
+        });
+      };
+
       return (
-        <div className="min-h-screen bg-gradient-to-br from-slate-50 via-blue-50 to-teal-50 p-8">
-          <div className="max-w-7xl mx-auto text-center">
-            <h1 className="text-6xl font-black text-slate-800 mb-4">Lake Cabin Scorer</h1>
-            <p className="text-xl text-slate-600 mb-8">If you see this, React is rendering! Add cabins below.</p>
-            
-            <button 
-              onClick={() => alert('Test button works!')}
-              className="py-4 px-8 bg-teal-600 text-white rounded-xl text-lg font-bold hover:bg-teal-700"
-            >
-              Test Click Me
-            </button>
+        <div className="max-w-4xl mx-auto">
+          <h1 className="text-5xl font-black text-slate-800 text-center mb-10">Lake Cabin</h1>
 
-            {/* Paste the rest of your UI here: addCabin button, cabins list, criteria, etc. */}
-          </div>
+          <button
+            onClick={addCabin}
+            className="w-full mb-10 py-4 bg-gradient-to-r from-teal-600 to-blue-600 text-white rounded-xl hover:from-teal-700 hover:to-blue-700 shadow-lg text-lg font-bold flex items-center justify-center gap-2"
+          >
+            <i data-lucide="plus" className="w-6 h-6"></i> Add Cabin
+          </button>
+
+          {cabins.length === 0 ? (
+            <p className="text-center text-slate-600 text-xl">Add your first cabin ↑</p>
+          ) : (
+            <div className="space-y-4">
+              {cabins.map(cabin => {
+                const total = calculateTotal(cabin);
+                const isExpanded = expanded.has(cabin.id);
+
+                return (
+                  <div key={cabin.id} className="bg-white/30 backdrop-blur-sm rounded-xl shadow border border-teal-100/50 overflow-hidden">
+                    <div
+                      className="px-6 py-4 flex items-center justify-between cursor-pointer hover:bg-white/20 transition-colors"
+                      onClick={() => toggleExpanded(cabin.id)}
+                    >
+                      <div className="text-xl font-bold text-slate-800 flex-1">
+                        {cabin.name}
+                      </div>
+
+                      <div className="flex items-center gap-6">
+                        <div className="text-2xl font-black">
+                          {total > 0 ? '+' : ''}{total}
+                        </div>
+
+                        <i
+                          data-lucide="chevron-down"
+                          className={`w-7 h-7 text-slate-700 transition-transform cursor-pointer ${isExpanded ? 'rotate-180' : ''}`}
+                          onClick={(e) => {
+                            e.stopPropagation();
+                            toggleExpanded(cabin.id);
+                          }}
+                        ></i>
+                      </div>
+                    </div>
+
+                    {isExpanded && (
+                      <div className="px-6 pb-6 pt-2 border-t border-teal-100/30 bg-white/10">
+                        <div className="grid grid-cols-1 md:grid-cols-2 gap-4">
+                          {criteria.map(crit => {
+                            const weight = weights[crit] || 1;
+                            const score = cabin.scores[crit] || 0;
+                            const weighted = score * weight;
+
+                            return (
+                              <div key={crit} className="flex flex-col gap-2 bg-white/40 rounded-lg p-3">
+                                <div className="flex justify-between items-center">
+                                  <span className="font-medium text-slate-800">
+                                    {crit}
+                                    {weight > 1 && <span className="ml-2 text-xs bg-amber-300 px-2 py-0.5 rounded font-bold">2×</span>}
+                                  </span>
+                                  <span className={`font-bold ${weighted > 0 ? 'text-green-600' : weighted < 0 ? 'text-red-600' : 'text-slate-500'}`}>
+                                    {weighted > 0 ? '+' : ''}{weighted}
+                                  </span>
+                                </div>
+
+                                <div className="grid grid-cols-5 gap-1.5">
+                                  {[-2, -1, 0, 1, 2].map(val => (
+                                    <button
+                                      key={val}
+                                      onClick={() => updateScore(cabin.id, crit, val)}
+                                      className={`py-2 rounded font-semibold text-white transition-all ${
+                                        score === val
+                                          ? 'ring-2 ring-offset-2 ring-teal-400 scale-105'
+                                          : 'opacity-70 hover:opacity-100'
+                                      } ${
+                                        val === 2 ? 'bg-green-600 hover:bg-green-700' :
+                                        val === 1 ? 'bg-green-400 hover:bg-green-500' :
+                                        val === 0 ? 'bg-yellow-400 hover:bg-yellow-500' :
+                                        val === -1 ? 'bg-red-300 hover:bg-red-400' :
+                                        'bg-red-500 hover:bg-red-600'
+                                      }`}
+                                    >
+                                      {val > 0 ? '+' : ''}{val}
+                                    </button>
+                                  ))}
+                                </div>
+                              </div>
+                            );
+                          })}
+                        </div>
+                      </div>
+                    )}
+                  </div>
+                );
+              })}
+            </div>
+          )}
         </div>
       );
     }
 
-    try {
-      const root = ReactDOM.createRoot(document.getElementById('root'));
-      root.render(<CabinScorer />);
-    } catch (err) {
-      console.error('Render crashed:', err);
-      document.getElementById('root').innerHTML = `
-        <div style="padding:40px; color:red; background:#fee; font-family:sans-serif;">
-          <h1>App failed to start</h1>
-          <p>Error: ${err.message || 'Unknown'}</p>
-          <p>Check console (F12) for details. Try opening via local server (not file://).</p>
-        </div>
-      `;
-    }
+    const root = ReactDOM.createRoot(document.getElementById('root'));
+    root.render(<CabinScorer />);
+
+    setTimeout(() => lucide.createIcons(), 100);
   </script>
 </body>
 </html>
