--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
           };
 
           const guidelines = {
-            "Distance from Home": "60 minutes", "Lake": "desirability", "Lake Depth": "25 feet",
-            "Frontage": "50 feet", "Beach": "Sand", "Lake Bottom": "Hard",
-            "Swimming Depth": "Three feet at Dock", "Backyard Slope": "Moderate",
-            "Cabin Condition": "needs almost nothing", "Bedrooms": "Two",
-            "Bathrooms": "One", "Lot side of Lake": "North, East"
+            "Distance from Home": "60 minutes +1", "Lake": "Desirability", "Lake Depth": "25 Feet Min +1",
+            "Frontage": "50 feet +1", "Beach": "Sand +2", "Lake Bottom": "Hard +2",
+            "Swimming Depth": "Three feet at Dock +1, Deeper +2", "Backyard Grade": "Moderate +1, Gentle +2",
+            "Cabin Condition": "Needs a Little Work, +1, Needs Almost Nothing +2", "Bedrooms": "Two +1",
+            "Bathrooms": "One +1", "Lot side of Lake": "North, West +1, East +2"
           };
 
           const [cabins, setCabins] = useState([]);
