--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
             "Frontage": "50 feet +1", "Beach": "Sand +2", "Lake Bottom": "Hard +2",
             "Swimming Depth": "Three feet at Dock +1, Deeper +2", "Backyard Grade": "Moderate +1, Gentle +2",
             "Cabin Condition": "Needs a Little Work, +1, Needs Almost Nothing +2", "Bedrooms": "Two +1",
-            "Bathrooms": "One +1", "Lot side of Lake": "North, West +1, East +2"
+            "Bathrooms": "One +1" "Loft": "+2 if Yes, 0 if No",
+            "Fireplace": "+2 if Yes, 0 if No", "Seasonal/Year Round": "Seasonal 0, Year Round +2", 
+            "Garage": "Number of Stalls", "Outdoor Storage": "Number of Sheds", "Lot side of Lake": "North, West +1, East +2"
           };
 
           const [cabins, setCabins] = useState([]);
