--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
           };
 
           const guidelines = {
-            "Distance from Home": "60 minutes +1", "Lake": "Desirability", "Lake Depth": "25 Feet Min +1",
-            "Frontage": "50 feet +1", "Beach": "Sand +2", "Lake Bottom": "Hard +2",
-            "Swimming Depth": "Three feet at Dock +1, Deeper +2", "Dock/Lift Included": " Dock +1, Lift +2", 
+            "Distance from Home": "60 Mins +1, Under 60 Mins +2", "Lake": "Desirability", "Lake Depth": "25' Min +1, 30' +2",
+            "Frontage": "50' +1", "Beach": "Sand +2", "Lake Bottom": "Hard +2",
+            "Swimming Depth": "3' at Dock +1, Deeper +2", "Dock/Lift Included": " Dock +1, Lift +2", 
             "Backyard Grade": "Moderate +1, Gentle +2",
             "Cabin Condition": "Needs Little, +1, Needs Nothing +2", "Bedrooms": "Two +1",
             "Bathrooms": "One +1", "Loft": "+2 if Yes, 0 if No",
             "Fireplace": "+2 if Yes, 0 if No", "Seasonal/Year Round": "Seasonal 0, Year Round +2", 
             "Garage": "Number of Stalls", "Outdoor Storage": "Number of Sheds", "Backlot": "+2 if Yes, 0 if No", 
-            "Lot side of Lake": "North, West +1, East +2"
+            "Lot side of Lake": "South +0, North/West +1, East +2"
           };
 
           const [cabins, setCabins] = useState([]);
