--- a/lake-cabin-38edit.html
+++ b/lake-cabin-38edit.html
@@ -26,7 +26,7 @@
             "Distance from Home", "Lake", "Lake Depth", "Frontage", "Beach", "Lake Bottom",
             "Swimming Depth", "Dock Condition", "Dock/Lift Included", "Backyard Grade",
             "Cabin Condition", "Bedrooms", "Bathrooms", "Kitchen", "Living Area", "Loft",
-            "Fireplace", "Seasonal/Year Round", "Garage", "Outdoor Storage", "Backlot", "Lot size",
+            "Fireplace", "Seasonal/Year Round", "Washer and Dryer", "Garage", "Outdoor Storage", "Backlot", "Lot size",
             "Lot side of Lake", "Included Furnishings/Toys"
           ];
 
