--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         function CabinScorer() {
           const criteria = [
             "Distance from Home", "Lake", "Lake Depth", "Frontage", "Beach", "Lake Bottom",
-            "Swimming Depth", "Dock Condition", "Dock/Lift Included", "Backyard Grade",
+            "Swimming Depth", "Dock Condition", "Dock/Lift Included", "Backyard Slope",
             "Cabin Condition", "Bedrooms", "Bathrooms", "Kitchen", "Living Area", "Loft",
-            "Fireplace", "Seasonal/Year Round", "Garage", "Outdoor Storage", "Backlot", "Lot size",
+            "Fireplace", "Seasonal/Year Round", "Washer and Dryer", "Garage", "Outdoor Storage", "Backlot", "Lot size",
             "Lot side of Lake", "Included Furnishings/Toys"
           ];
 
@@ -39,10 +39,11 @@
             "Distance from Home": "60 Mins +1, Under 60 Mins +2", "Lake": "Desirability", "Lake Depth": "25' Min +1, 30' +2",
             "Frontage": "50' +1", "Beach": "Sand +2", "Lake Bottom": "Hard +2",
             "Swimming Depth": "3' at Dock +1, Deeper +2", "Dock/Lift Included": " Dock +1, Lift +2", 
-            "Backyard Grade": "Moderate +1, Gentle +2",
+            "Backyard Slope": "Moderate +1, Gentle +2",
             "Cabin Condition": "Needs Little, +1, Needs Nothing +2", "Bedrooms": "Two +1",
             "Bathrooms": "One +1", "Loft": "+2 if Yes, 0 if No",
-            "Fireplace": "+2 if Yes, 0 if No", "Seasonal/Year Round": "Seasonal 0, Year Round +2", 
+            "Fireplace": "+2 if Yes, 0 if No", "Seasonal/Year Round": "Seasonal 0, Year Round +2",
+            "Washer and Dryer": "+2 if Yes, 0 if No",
             "Garage": "Number of Stalls", "Outdoor Storage": "Number of Sheds", "Backlot": "+2 if Yes, 0 if No", 
             "Lot side of Lake": "South +0, North/West +1, East +2"
           };
@@ -339,7 +340,7 @@
                     {[
                       { score: 2, label: 'Excellent', color: 'bg-green-500', textColor: 'text-green-700' },
                       { score: 1, label: 'Good', color: 'bg-green-300', textColor: 'text-green-700' },
-                      { score: 0, label: 'OK, Zero, Default', color: 'bg-yellow-400', textColor: 'text-yellow-700' },
+                      { score: 0, label: 'OK', color: 'bg-yellow-400', textColor: 'text-yellow-700' },
                       { score: -1, label: 'Not good', color: 'bg-red-300', textColor: 'text-red-600' },
                       { score: -2, label: 'Terrible', color: 'bg-red-500', textColor: 'text-red-700' },
                     ].map(({ score, label, color, textColor }) => (
