--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
                     {[
                       { score: 2, label: 'Excellent', color: 'bg-green-500', textColor: 'text-green-700' },
                       { score: 1, label: 'Good', color: 'bg-green-300', textColor: 'text-green-700' },
-                      { score: 0, label: 'OK', color: 'bg-yellow-400', textColor: 'text-yellow-700' },
+                      { score: 0, label: 'OK, Zero, Default', color: 'bg-yellow-400', textColor: 'text-yellow-700' },
                       { score: -1, label: 'Not good', color: 'bg-red-300', textColor: 'text-red-600' },
                       { score: -2, label: 'Terrible', color: 'bg-red-500', textColor: 'text-red-700' },
                     ].map(({ score, label, color, textColor }) => (
