--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             "Swimming Depth": "3' at Dock +1, Deeper +2", "Dock/Lift Included": " Dock +1, Lift +2", 
             "Backyard Slope": "Moderate +1, Gentle +2",
             "Cabin Condition": "Needs Little, +1, Needs Nothing +2", "Bedrooms": "Two +1",
-            "Bathrooms": "One +1", "Loft": "+2 if Yes, 0 if No",
+            "Bathrooms": "One +1", "Kitchen": "Overall Condition", "Living Area": "Overall Condition", "Loft": "+2 if Yes, 0 if No",
             "Fireplace": "+2 if Yes, 0 if No", "Seasonal/Year Round": "Seasonal 0, Year Round +2",
             "Washer and Dryer": "+2 if Yes, 0 if No",
             "Garage": "Number of Stalls", "Outdoor Storage": "Number of Sheds", "Backlot": "+2 if Yes, 0 if No", 
