--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                   <div className="mb-8 bg-gradient-to-br from-teal-600 to-blue-600 rounded-2xl shadow-2xl p-8 text-white">
                     <h2 className="text-3xl font-bold mb-6 flex items-center gap-3">
                       <span className="text-4xl">🏡</span>
-                      Cabins / 64 Points Max Score
+                      Cabins / 64pts Max 
                     </h2>
                     <div className="grid gap-4">
                       {cabins.map((cabin) => {
