--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
               <div className="max-w-7xl mx-auto">
                 <div className="text-center mb-12">
                   <h1 className="text-4xl font-black text-slate-800 mb-4">Lake Cabins</h1>
-                  <p className="text-xl text-slate-600 mb-6">Score and compare lake cabins</p>
+                  <p className="text-xl text-slate-600 mb-6">64 Points Max Score</p>
                 </div>
 
                 <button onClick={addCabin} className="w-full mb-6 py-4 bg-gradient-to-r from-teal-600 to-blue-600 text-white rounded-xl hover:from-teal-700 hover:to-blue-700 shadow-lg flex items-center justify-center gap-3 text-lg font-bold">
@@ -197,7 +197,7 @@
                   <div className="mb-8 bg-gradient-to-br from-teal-600 to-blue-600 rounded-2xl shadow-2xl p-8 text-white">
                     <h2 className="text-3xl font-bold mb-6 flex items-center gap-3">
                       <span className="text-4xl">🏡</span>
-                      Cabins / 64pts Max 
+                      Cabins 
                     </h2>
                     <div className="grid gap-4">
                       {cabins.map((cabin) => {
