--- a/index.html
+++ b/index.html
@@ -356,4 +356,29 @@
 
                 <div className="mt-8 bg-white/80 rounded-2xl shadow-lg p-6 border border-teal-100">
                   <h3 className="text-xl font-bold text-slate-800 mb-4 text-center">Backup Your Data</h3>
-                  <div className="flex gap-4 max-w-md m
+                  <div className="flex gap-4 max-w-md mx-auto">
+                    <button onClick={exportData} className="flex-1 py-3 bg-blue-600 text-white rounded-lg hover:bg-blue-700 font-bold flex items-center justify-center gap-2">
+                      <i data-lucide="download" className="w-5 h-5"></i>
+                      Export Data
+                    </button>
+                    <label className="flex-1 py-3 bg-green-600 text-white rounded-lg hover:bg-green-700 font-bold flex items-center justify-center gap-2 cursor-pointer">
+                      <i data-lucide="upload" className="w-5 h-5"></i>
+                      Import Data
+                      <input type="file" accept=".json" onChange={importData} className="hidden" />
+                    </label>
+                  </div>
+                  <p className="text-xs text-slate-600 text-center mt-3">Export to save a backup. Import to restore your cabins.</p>
+                </div>
+
+              </div>
+            </div>
+          );
+        }
+
+        const root = ReactDOM.createRoot(document.getElementById('root'));
+        root.render(<CabinScorer />);
+        
+        setTimeout(() => { lucide.createIcons(); }, 100);
+    </script>
+</body>
+</html>
